[package]
name = "atlas_exec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.60"
time = { version = "0.3.36", features = ["serde", "macros"] }
url = { version = "2.5.0", features = ["serde"] }
which = "6.0.1"
